--- a/www/index.html
+++ b/www/index.html
@@ -2,11 +2,15 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 	<meta http-equiv="Content-type" content="text/html; charset=utf-8" />
+	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+        <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, 
+        width=device-width, height=device-height, target-densitydpi=device-dpi" />
 	<title>Free CSS template by ChocoTemplates.com</title>
 	<link rel="stylesheet" href="css/style.css" type="text/css" media="all" />
 	<script src="js/jquery-1.4.1.min.js" type="text/javascript"></script>
 	<script src="js/jquery.jcarousel.pack.js" type="text/javascript"></script>
 	<script src="js/jquery-func.js" type="text/javascript"></script>
+	<script type="text/javascript" src="cordova-2.4.0.js"></script>
 </head>
 <body>
 <div id="page" class="shell">
